@@ -51,6 +51,7 @@ libIntaRNA_a_HEADERS =    \
 					PredictionTrackerPairMinE.h \
 					PredictionTrackerProfileMinE.h \
 					PredictionTrackerSpotProb.h \
+					PredictionTrackerSpotProbAll.h \
 					PredictionTrackerProfileSpotProb.h \
 					Predictor.h \
 					PredictorMaxProb.h \
@@ -99,6 +100,7 @@ libIntaRNA_a_SOURCES =    \
 					PredictionTrackerPairMinE.cpp \
 					PredictionTrackerProfileMinE.cpp \
 					PredictionTrackerSpotProb.cpp \
+					PredictionTrackerSpotProbAll.cpp \
 					PredictionTrackerProfileSpotProb.cpp \
 					PredictorMaxProb.cpp \
 					PredictorMfe.cpp \
