@@ -1,3 +1,10 @@
+181108 Martin Raden :
+ + IntaRNA/PredictionTrackerSpotProbAll : exhaustively computes and prints all
+   spot probabilities (ie for all intermolecular index pairs)
+ * bin/CommandLineParsing :
+   + registration and documentation of PredictionTrackerSpotProbAll usage
+ * README.md :
+   * exhaustive spot prob calculation documented
 
 180907 Martin Raden :
  * IntaRNA/OutputHandlerCsv :
